--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="row">
                     <div class="about-img">
                         <div class="img-box">
-                            <img src="img/vishu_tricking001_20210522_0 (1).jpg" alt="" class="imgPic">
+                            <img src="img/aboutPage.jpg" alt="" class="imgPic">
                         </div>
                     </div>
                     <div class="about-text">
