Completed About Section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </section>
 
         <section class="about-section section-padding ">
-            <div class="con">
+            <div class="container">
                 <div class="row">
                     <div class="section-title">
                         <h2>About me</h2>
@@ -74,9 +74,64 @@
                         </div>
 
                         <div class="about-tabs">
-                            <button type="button" data-target="#education" class="tab-item">Education</button>
+                            <button type="button" data-target="#education" class="tab-item active">Education</button>
                             <button type="button" data-target="#experience" class="tab-item">Experience</button>
                         </div>
+
+                        <div class="tab-content active" id="education">
+                            <div class="timeline">
+                                <div class="timeline-item">
+                                    <span class="date">
+                                        2019 - 2023
+                                    </span>
+                                    <h4>bachelor of technology - <span>malwa institute of technology indore</span></h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe doloribus, excepturi fugit qui error aut animi at minima voluptatem delectus nesciunt mollitia eius enim? Optio, illum ad! Soluta, quas enim.</p>
+                                </div>
+
+                                <div class="timeline-item">
+                                    <span class="date">
+                                        2019 - 2023
+                                    </span>
+                                    <h4>bachelor of technology - <span>malwa institute of technology indore</span></h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe doloribus, excepturi fugit qui error aut animi at minima voluptatem delectus nesciunt mollitia eius enim? Optio, illum ad! Soluta, quas enim.</p>
+                                </div>
+
+                                <div class="timeline-item">
+                                    <span class="date">
+                                        2019 - 2023
+                                    </span>
+                                    <h4>bachelor of technology - <span>malwa institute of technology indore</span></h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe doloribus, excepturi fugit qui error aut animi at minima voluptatem delectus nesciunt mollitia eius enim? Optio, illum ad! Soluta, quas enim.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="tab-content" id="experience">
+                            <div class="timeline">
+                                <div class="timeline-item">
+                                    <span class="date">
+                                        22/05/2023 - 02/01/2024
+                                    </span>
+                                    <h4>Trainee Software Developer - <span>at Iaastha Technologies</span></h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe doloribus, excepturi fugit qui error aut animi at minima voluptatem delectus nesciunt mollitia eius enim? Optio, illum ad! Soluta, quas enim.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <button class="button">
+                            <span class="button_lg">
+                                <span class="button_sl"></span>
+                                <span class="button_text">Download Resume</span>
+                            </span>
+                        </button>
+                           
+                        <button class="button">
+                            <span class="button_lg">
+                                <span class="button_sl"></span>
+                                <span class="button_text">Contact me</span>
+                            </span>
+                        </button>
+                          
                     </div>
                 </div>
             </div>
