Adding New Sections and Making PopUp for View Project

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <title>Portfolio Website</title>
 </head>
 
@@ -16,7 +17,7 @@
             <div class="wave"></div>
             <div class="wave"></div>
          </div>
-        <section class="home-section centerProperty hidden">
+        <section class="home-section centerProperty">
             <div class="container">
                 <div class="row centerProperty">
                     <div class="home-text">
@@ -43,7 +44,7 @@
             </div>
         </section>
 
-        <section class="about-section section-padding ">
+        <section class="about-section section-padding  ">
             <div class="container">
                 <div class="row">
                     <div class="section-title">
@@ -90,9 +91,9 @@
 
                                 <div class="timeline-item">
                                     <span class="date">
-                                        2019 - 2023
+                                        2018 - 2019
                                     </span>
-                                    <h4>bachelor of technology - <span>malwa institute of technology indore</span></h4>
+                                    <h4>Higher Secondary Education - <span>milton public h.s. school , indore</span></h4>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe doloribus, excepturi fugit qui error aut animi at minima voluptatem delectus nesciunt mollitia eius enim? Optio, illum ad! Soluta, quas enim.</p>
                                 </div>
 
@@ -100,7 +101,7 @@
                                     <span class="date">
                                         2019 - 2023
                                     </span>
-                                    <h4>bachelor of technology - <span>malwa institute of technology indore</span></h4>
+                                    <h4>High Secondary Education - <span>milton public h.s. school indore</span></h4>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe doloribus, excepturi fugit qui error aut animi at minima voluptatem delectus nesciunt mollitia eius enim? Optio, illum ad! Soluta, quas enim.</p>
                                 </div>
                             </div>
@@ -136,6 +137,190 @@
                 </div>
             </div>
         </section>
+
+        <section class="profile-section section-padding">
+            <div class="container">
+                <div class="row">
+                    <div class="section-title">
+                        <h2>recent work</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="portfolio-item">
+                        <div class="porfolio-thumbnail">
+                            <img src="/img/portfolioWeb.png" alt="">
+                        </div>
+                        <h3 class="portfolio-title">Initial Level Portfolio Website</h3>
+                        <button class="button web-visit-btn project-view" type="button" >
+                            View Project
+                        </button>
+                        <div class="portfolio-item-detail">
+                            <div class="description">
+                                It is a Portfolio Website i build these portfolio using html, css and Js it is a Learning Based Project 
+                            </div>
+                            <div class="general-info">
+                                <ul>
+                                    <li>Created - <span>22 Jan 2024</span></li>
+                                    <li>Technologies Use - <span>Html ,Css and JavaScript</span></li>
+                                    <li>Role - <span>Frontend</span></li>
+                                    <li>View Online - <span><a href="https://vishutrickcoder.github.io/portfolio/" target="_blank">Check Now</a></span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio-item">
+                        <div class="porfolio-thumbnail">
+                            <img src="/img/narutoWeb.png" alt="">
+                        </div>
+                        <h3 class="portfolio-title">Naruto theme website</h3>
+                        <button class="button web-visit-btn project-view" type="button" >
+                            Visit Website
+                        </button>
+                        <div class="portfolio-item-detail">
+                            <div class="description">
+                                These is a Naruto Theme website i created these website to make website responsible and for learning purspose . i use animations to the website too for better experience .  
+                            </div>
+                            <div class="general-info">
+                                <ul>
+                                    <li>Created - <span>20 Dec 2023</span></li>
+                                    <li>Technologies Use - <span>Html , Css and JavaScript</span></li>
+                                    <li>Role - <span>Frontend</span></li>
+                                    <li>View Online - <span><a href="https://vishutrickcoder.github.io/ResponsiveWebSite/" target="_blank">Check Now</a></span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio-item">
+                        <div class="porfolio-thumbnail">
+                            <img src="/img/GuessTheNumber.png" alt="">
+                        </div>
+                        <h3 class="portfolio-title">Guess the number game</h3>
+                        <button class="button web-visit-btn project-view" type="button" >
+                            Visit Website
+                        </button>
+                        <div class="portfolio-item-detail">
+                            <div class="description">
+                                Guess the Number is an engaging and interactive web-based game that challenges players to guess a randomly generated number within a specified range. This project, implemented using HTML, CSS, and JavaScript, brings the classic guessing game to life in a modern and user-friendly interface.
+                            </div>
+                            <div class="general-info">
+                                <ul>
+                                    <li>Created - <span>08 Oct 2023</span></li>
+                                    <li>Technologies User - <span>Html ,Css and JavaScript</span></li>
+                                    <li>Role - <span>Frontend</span></li>
+                                    <li>View Online - <span><a href="https://vishutrickcoder.github.io/Guess-the-number/" target="_blank">Check Now</a></span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio-item">
+                        <div class="porfolio-thumbnail">
+                            <img src="/img/imageSlider.png" alt="">
+                        </div>
+                        <h3 class="portfolio-title">horizontal image slider</h3>
+                        <button class="button web-visit-btn project-view" type="button" >
+                            Visit Website
+                        </button>
+                        <div class="portfolio-item-detail">
+                            <div class="description">
+                                The Simple Horizontal Image Slider is a basic web project that allows users to display a series of images in a horizontal sliding format. It's implemented using HTML for structure, CSS for styling, and JavaScript for functionality. The slider automatically transitions between images every 3 seconds, providing a visually appealing way to showcase a collection of photos.
+                            </div>
+                            <div class="general-info">
+                                <ul>
+                                    <li>Created - <span>20 sep 2023</span></li>
+                                    <li>Technologies User - <span>Html ,Css</span></li>
+                                    <li>Role - <span>Frontend</span></li>
+                                    <li>View Online - <span><a href="https://vishutrickcoder.github.io/Horizontal-Slider/" target="_blank">Check Now</a></span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio-item">
+                        <div class="porfolio-thumbnail">
+                            <img src="/img/noteWeb.png" alt="">
+                        </div>
+                        <h3 class="portfolio-title">Note Taking Website</h3>
+                        <button class="button web-visit-btn project-view" type="button" >
+                            Visit Website
+                        </button>
+                        <div class="portfolio-item-detail">
+                            <div class="description">
+                                It is a minimilistic user-friendly note-taking website designed to streamline the process of capturing and organizing your thoughts, ideas, and important information. With a clean and intuitive interface, you can delete note by doing dubble click on the note . 
+                            </div>
+                            <div class="general-info">
+                                <ul>
+                                    <li>Created - <span>3 sep 2023</span></li>
+                                    <li>Technologies User - <span>Html ,Css and JavaScript</span></li>
+                                    <li>Role - <span>Frontend</span></li>
+                                    <li>View Online - <span><a href="https://vishutrickcoder.github.io/Note-App/" target="_blank">Check Now</a></span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio-item">
+                        <div class="porfolio-thumbnail">
+                            <img src="/img/nextGenWeb.png" alt="">
+                        </div>
+                        <h3 class="portfolio-title">Responsive WebSite</h3>
+                        <button class="button web-visit-btn project-view" type="button" >
+                            Visit Website
+                        </button>
+                        <div class="portfolio-item-detail">
+                            <div class="description">
+                                Next is a Responsive website designed with a focus on responsive web design principles. This project serves as an interactive learning about technology where users can explore and understand the key concepts of Technologies .
+                            </div>
+                            <div class="general-info">
+                                <ul>
+                                    <li>Created - <span>24 Aug 2023</span></li>
+                                    <li>Technologies User - <span>Html ,Css and JavaScript</span></li>
+                                    <li>Role - <span>Frontend</span></li>
+                                    <li>View Online - <span><a href="https://vishutrickcoder.github.io/Next-Web/" target="_blank">Check now</a></span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio-item">
+                        <div class="porfolio-thumbnail">
+                            <img src="/img/dictionaryWebsiteThumnail.png" alt="">
+                        </div>
+                        <h3 class="portfolio-title">Word dictionary website</h3>
+                        <button class="button web-visit-btn project-view" type="button" >
+                            Visit Website
+                        </button>
+                        <div class="portfolio-item-detail">
+                            <div class="description">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem exercitationem maxime inventore assumenda tenetur ex illo eos fuga! Quos nisi error aspernatur tenetur consectetur vel tempora eaque atque consequuntur repellendus. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id odit quo in culpa et voluptates libero excepturi, assumenda totam doloremque hic blanditiis, sequi dolores cum? Inventore aliquid illum laboriosam consequatur.
+                            </div>
+                            <div class="general-info">
+                                <ul>
+                                    <li>Created - <span>24 Jan 2024</span></li>
+                                    <li>Technologies User - <span>Html ,Css and JavaScript</span></li>
+                                    <li>Role - <span>Frontend</span></li>
+                                    <li>View Online - <span><a href="#" target="_blank">www.domain.com</a></span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+
+    <div class="portfolio-detail-popup" >
+        <div class="popup-inner">
+            <div class="popup-content">
+                <div class="popup-header">
+                    <button class="btn popup-close" type="button" >
+                       <i class="fas fa-times"></i>
+                      </button>
+                    <div class="popup-thunbnail">
+                        <img src="img/dictionaryWebsiteThumnail.png" alt="">
+                    </div>
+                    <h3>dictionary webapp</h3>
+                </div>
+                <div class="popup-body">
+                </div>
+            </div>
+        </div>
     </div>
     <script src="js/script.js"></script>
 </body>
